# micro-gpt

./: .pmat-gates.toml  Cargo.toml  LICENSE-APACHE  Makefile  README.md  deny.toml
microgpt-alt/: Cargo.toml  README.md
microgpt-alt/src/: lib.rs  main.rs
microgpt-alt/src/autograd/: mod.rs  tests.rs
microgpt-alt/src/autograd/impls/: mod.rs  scalar.rs  vector.rs
microgpt-alt/src/config/: builder.rs  constants.rs  error.rs  mod.rs
microgpt-alt/src/data/: error.rs  mod.rs  types.rs
microgpt-alt/src/data/impls/: mod.rs  path.rs
microgpt-alt/src/tokenizer/: error.rs  mod.rs  vocab.rs
microgpt-alt/src/tokenizer/impls/: char_impl.rs  mod.rs
microgpt-original/: Cargo.toml  README.md
microgpt-original/src/: lib.rs  main.rs
src/: main.rs
