[package]
name = "micro-gpt"
version = "0.1.0"
authors = ["Guillaume M. <235853469+vvylym@users.noreply.github.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/vvylym/micro-gpt"
homepage = "https://vvylym.github.io/micro-gpt/"
publish = false

[dependencies]
rand = "0.10"
rand_distr = "0.6"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
